--- a/catalog.html
+++ b/catalog.html
@@ -27,28 +27,30 @@
         <h1 class="page-header__title">Каталог товаров</h1>
     </header>
     
-   <div class="catalog">
-       <div class="catalog__wrapper">
-           <div class="catalog__block">
+   <article class="catalog-block">
+       <div class="catalog-block__wrapper">
                <img src="img/catalog-item-1.jpg" width="260" height="195" alt="Изображение товара №1">
                <h3 class="catalog__item-title">Зайчик-попрыгайчик</h3>
                <span>Рост 30 см, вес 200 г</span>
                <p class="catalog__item-price">1 200 руб.</p>
-           </div>
-           <div class="catalog__block">
+        </div>
+    </article>       
+    <article class="catalog__block">
+       <div class="catalog-block__wrapper">      
                <img src="img/catalog-item-2.jpg" width="260" height="195" alt="Изображение товара №1">
                <h3 class="catalog__item-title">Корзинка для белья</h3>
                <span>Диаметр 15 см, высота 10 см</span>
                <p class="catalog__item-price">690 руб.</p>
-           </div>
-           <div class="catalog__block">
+        </div>       
+    </article>
+    <article class="catalog__block">
+       <div class="catalog-block__wrapper">
                <img src="img/catalog-item-3.jpg" width="260" height="195" alt="Изображение товара №1">
                <h3 class="catalog__item-title">Большая корзинка для игрушек</h3>
                <span>Диаметр 30 см, высота 30 см</span>
                <p class="catalog__item-price">1 500 руб.</p>
-           </div>
-       </div>
-   </div>
+        </div>       
+    </article>
    
    <div class="video">
        <div class="video__wrapper">
